--- a/phphome.css
+++ b/phphome.css
@@ -25,7 +25,7 @@
 }
 
 body {
-    background-image: url(https://images.wallpapersden.com/image/download/creek-digital-art_a2lqZ2WUmZqaraWkpJRmaGhrrWxrbQ.jpg);
+    background-image: url(https://road-to-php.com/bg.svg);
     background-attachment: fixed;
 }
 
