--- a/phphome.css
+++ b/phphome.css
@@ -1,27 +1,50 @@
 .head {
-    font-family: 'Ubuntu Mono', monospace;
+    font-family: 'Source Code Pro', monospace;
     color: white;
     text-align: center;
     background-color: black;
     width: 35%;
     margin: auto;
-    padding: 0.7rem;
+    margin-top: 8rem;
+    padding: 0.5rem;
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
     font-size: 25px;
-    font-weight: bold;
-    /* word-spacing: 10px; */
+    font-weight: 700;
     letter-spacing: 2px;
 }
 
 .para {
-    font-family: 'Fira Mono', monospace;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: 200;
     font-size: 15px;
     width: 30%;
     margin: auto;
+    margin-bottom: 2rem;
     text-align: center;
-    color: white;
+    color: rgb(247, 247, 247);
     margin-top: 2rem;
     background-color: black;
     padding: 20px;
+}
+
+.dot {
+    color: black;
+    background-color: black;
+}
+
+input[type=text] {
+    color: white;
+    font-family: 'Source Code Pro', monospace;
+    text-align: left;
+    font-size: 14px;
+}
+
+input[type=email] {
+    color: white;
+    font-family: 'Source Code Pro', monospace;
+    text-align: left;
+    font-size: 14px;
 }
 
 body {
@@ -32,83 +55,131 @@ body {
 * {
     margin: 0;
     padding: 0;
-}
-
-.parent {
-    margin: 10rem 0 0 0;
-}
-
-.name {
-    color: white;
-    padding-right: 1rem;
-    font-size: 25px;
-    font-weight: 600;
-}
-
-.name-parent {
-    margin: auto;
-    width: 40%;
-    background-color: black;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    margin-top: 2rem;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 200;
-    padding: 20px 0 10px 0;
-}
-
-.name-input {
-    display: inline;
-}
-
-.email {
-    padding: 37px;
-    text-align: center;
-}
-
-.input-name {
-    background: transparent;
-    border: 2px solid white;
-    padding: 10px 0 7px 0;
-    width: 40%;
-}
-
-input[type=text] {
-    color: white;
-    font-size: 20px;
-}
-
-input[type=email] {
-    color: white;
-    font-size: 20px;
 }
 
 .sub {
-    color: rgb(75, 74, 74);
-    text-decoration: none;
-    background-color: white;
-    width: 18px;
-    font-size: 22px;
-    padding: 2px 5px 2px 5px;
-    margin: auto;
-    text-align: center;
+    color: black;
+    background-color: rgb(243, 243, 243);
+    border: 1px solid black;
+    padding: 3px 6px 3px 6px;
     font-family: 'Roboto Mono', monospace;
-    font-family: 'Space Mono', monospace;
-    font-weight: 300;
+    width: 20%;
+    font-size: 19px;
+    text-decoration: none;
 }
+
+.input {
+    color: rgb(236, 236, 236);
+    display: inline-block;
+    margin: auto;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+    font-size: 23px;
+    font-family: 'Ubuntu', monospace;
+}
+
+.parentofinput {
+    background-color: black;
+    width: 38%;
+    margin: auto;
+}
+
+.bg-color {
+    background-color: black;
+}
+
+.input-bar {
+    width: 40%;
+    padding: 0.5rem;
+    justify-content: center;
+    background-color: transparent;
+    border: 2px solid white;
+    margin-right: 1rem;
+}
+
+.displayinline {
+    display: inline;
+}
+
+.name {
+    margin-right: 11rem;
+    margin-left: -3rem;
+}
+
+.submit {
+    background-color: white;
+    color: black;
+    border: 1px solid white;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 20px;
+    margin: 1rem;
+    margin-top: 2rem;
+    padding: 0.2rem;
+    width: 20%;
+    display: inline-block;
+    text-align: center;
+}
+
+.submit:hover {
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 20px;
+    margin: 1rem;
+    margin-top: 2rem;
+    padding: 0.2rem;
+    width: 20%;
+    display: inline-block;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+.not-mail {
+    color: white;
+    font-family: 'Ubuntu', monospace;
+    font-weight: normal;
+    margin-top: 12px;
+    font-size: 18px;
+    text-align: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin: 2rem;
+    margin-top: 0.5rem;
+    display: inline-flex;
+    line-height: 1.5em;
+}
+
+
+/* .align-submit {
+    display: inline;
+} */
 
 .sub:hover {
     color: white;
-    text-decoration: none;
-    background-color: black;
-    border: 2px solid white;
-    width: 18px;
-    font-size: 22px;
-    padding: 2px 5px 2px 5px;
-    margin: auto;
-    text-align: center;
+    background-color: transparent;
+    border: 1px solid white;
+    padding: 3px 6px 3px 6px;
     font-family: 'Roboto Mono', monospace;
-    font-family: 'Space Mono', monospace;
-    font-weight: 300;
+    width: 20%;
+    font-size: 19px;
+    text-decoration: none;
+    border-radius: 10px;
+}
+
+.sub2 {
+    text-decoration: none;
+}
+
+.sub2:hover {
+    text-decoration: none;
+    color: white;
 }
 
 .subscribe {
@@ -150,10 +221,10 @@ input[type=email] {
 }
 
 .stitcher:hover {
-    color: black;
-    background-color: transparent;
-    border: none;
-    text-decoration: underline;
+    color: white;
+    background-color: black;
+    border: 1px solid rgb(241, 107, 130);
+    /* text-decoration: underline; */
     font-family: sans-serif;
     font-weight: bold;
     padding: 7px 7px 7px 7px;
@@ -169,4 +240,217 @@ input[type=email] {
 .book-link:hover {
     color: white;
     text-decoration: none;
+}
+
+.form {
+    text-align: center;
+}
+
+.twitter {
+    background-color: black;
+    color: white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    border: 2px solid white;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 50px;
+    cursor: pointer;
+}
+
+.twitter:hover {
+    background-color: blue;
+    color: white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    border: 2px solid white;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 50px;
+    cursor: pointer;
+}
+
+.linked {
+    background-color: black;
+    text-shadow: 5px 5px 50px black;
+    color: white;
+    border: 1px solid white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 50px;
+    cursor: pointer;
+}
+
+.linked:hover {
+    background-color: rgb(0, 81, 255);
+    color: white;
+    font-weight: bold;
+    border: 1px solid white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 50px;
+    cursor: pointer;
+}
+
+.linked1 {
+    color: white;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.twitter1 {
+    color: white;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.Name {
+    display: none;
+}
+
+.Email {
+    display: none;
+}
+
+@media (max-width: 376px) {
+    .head {
+        font-family: 'Source Code Pro', monospace;
+        color: white;
+        text-align: center;
+        background-color: black;
+        width: 95%;
+        margin: auto;
+        margin-top: 8rem;
+        font-size: 15px;
+        padding: 0.8rem;
+        font-weight: 700;
+        letter-spacing: 0px;
+    }
+    * {
+        margin: 0.4rem;
+        background-attachment: fixed;
+    }
+    body {
+        background-image: url(phone-bg.png);
+        background-attachment: fixed;
+        width: 100%;
+        margin: auto;
+    }
+    .para {
+        font-family: monospace;
+        font-weight: 300;
+        color: rgb(224, 220, 220);
+        text-align: center;
+        background-color: black;
+        width: 95%;
+        margin: auto;
+        margin-top: 3rem;
+        font-size: 12px;
+        padding: 0.8rem;
+        font-weight: 700;
+        line-height: 1.5rem;
+    }
+    .font-weight {
+        font-weight: 700;
+    }
+    .parentofinput {
+        width: 100%;
+    }
+    .input {
+        width: 35%;
+        display: inline;
+    }
+    .name {
+        margin-left: 1rem;
+        display: none;
+    }
+    .email {
+        display: none;
+    }
+    .Name {
+        display: initial;
+        color: white;
+        font-size: 25px;
+        margin-right: 1rem;
+        /* margin-left: rem; */
+    }
+    .Email {
+        display: inline;
+        color: white;
+        font-size: 25px;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    .phone-input {
+        width: 100%;
+        margin: auto;
+        font-family: 'Source Code Pro', monospace;
+    }
+    .name-phone {
+        width: 30%;
+        display: inline-block;
+        margin-right: 1rem;
+        margin-left: 0;
+        padding: 8px 25px 8px 20px;
+    }
+    .email-phone {
+        width: 30%;
+        display: inline-block;
+        margin: auto;
+        padding: 8px 25px 8px 12px;
+    }
+    .phone-input {
+        padding-top: 1rem;
+        margin-top: 2rem;
+    }
+    .submit {
+        width: 50%;
+    }
+    .submit:hover {
+        width: 50%;
+    }
+    .not-mail {
+        width: 80%;
+        margin: auto;
+        margin-top: 1rem;
+        padding-bottom: 2rem;
+        font-family: 'Ubuntu', monospace;
+        color: rgb(224, 224, 224)
+    }
+    .last-para {
+        width: 90%;
+        font-size: 15px;
+    }
+    .twitter {
+        width: 60%;
+        margin-bottom: 40px;
+        box-shadow: none;
+    }
+    .twitter:hover {
+        width: 60%;
+        margin-bottom: 40px;
+        box-shadow: none;
+    }
+    .linked {
+        width: 60%;
+        margin-top: 0px;
+        box-shadow: none;
+    }
+    .linked:hover {
+        width: 60%;
+        margin-top: 0px;
+        box-shadow: none;
+    }
 }
