--- a/subscribephp.css
+++ b/subscribephp.css
@@ -3,13 +3,16 @@
     color: white;
     text-align: center;
     background-color: black;
-    width: 35%;
+    width: 40%;
     margin: auto;
-    padding: 0.7rem;
+    padding: 1rem;
     font-size: 25px;
     font-weight: bold;
-    /* word-spacing: 10px; */
-    letter-spacing: 2px;
+}
+
+body {
+    background-image: url("img.jpg");
+    background-attachment: fixed;
 }
 
 .para {
@@ -29,8 +32,62 @@
     padding: 0;
 }
 
-.vignette-shadow-ex {
-    box-shadow: inset 0 0 100px black;
+.twitter {
+    background-color: black;
+    color: white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    border: 2px solid white;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+.twitter:hover {
+    background-color: blue;
+    color: white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    border: 2px solid white;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+.linked {
+    background-color: black;
+    text-shadow: 5px 5px 50px black;
+    color: white;
+    border: 2px solid white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+.linked:hover {
+    background-color: rgb(0, 81, 255);
+    color: white;
+    font-weight: bold;
+    border: 1px solid white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    box-shadow: 4px 3px 50px black;
+    width: 8%;
+    padding: 2px 4px 2px 4px;
+    font-size: 18px;
+    margin-bottom: 25px;
+    cursor: pointer;
 }
 
 .parent {
@@ -146,19 +203,21 @@ input[type=email] {
     padding: 7px 7px 7px 7px;
     margin: auto;
     margin-bottom: 10%;
+    margin-top: 1rem;
 }
 
 .stitcher:hover {
     color: white;
-    background: transparent;
-    border: none;
+    background: black;
+    border: 2px solid white;
     cursor: pointer;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     font-family: sans-serif;
     font-weight: bold;
     padding: 7px 7px 7px 7px;
     margin: auto;
     margin-bottom: 10%;
+    margin-top: 1rem;
 }
 
 .credits {
@@ -184,4 +243,73 @@ input[type=email] {
     cursor: pointer;
     padding: 2px 6px 2px 6px;
     font-family: Helvetica, sans-serif;
+}
+
+@media (max-width: 376px) {
+    .head {
+        width: 90%;
+        font-size: 15px;
+        margin-left: 0px;
+        margin-top: 1rem;
+        padding: 1rem;
+    }
+    * {
+        width: 100%;
+        margin: auto;
+        /* justify-content: center; */
+        align-items: center;
+        text-align: center;
+    }
+    .para {
+        width: 80%;
+        border: 1px solid white;
+        text-align: center;
+        font-size: 12px;
+        color: rgb(224, 224, 224);
+        font-family: 'Fira Mono', monospace;
+        line-height: 1.5;
+        display: inline-block;
+        margin-left: 0px;
+        padding: 1.5rem;
+    }
+    .head {
+        display: inline-block;
+    }
+    body {
+        background-image: url("bg2.png");
+        background-size: cover;
+        background-attachment: fixed;
+        width: 100%;
+    }
+    .credits {
+        margin-top: 2rem;
+    }
+    .twitter {
+        width: 50%;
+        display: inline-block;
+        margin-left: 2rem;
+    }
+    .twitter:hover {
+        width: 50%;
+        display: inline-block;
+        margin-left: 2rem;
+    }
+    .linked {
+        width: 50%;
+        display: inline-block;
+        margin-left: 2rem;
+    }
+    .linked:hover {
+        width: 50%;
+        display: inline-block;
+        margin-left: 2rem;
+    }
+    .stitcher {
+        width: 50%;
+        margin-left: 4px;
+    }
+    .stitcher:hover {
+        width: 50%;
+        margin-left: 4px;
+    }
 }
