--- a/subscribephp.css
+++ b/subscribephp.css
@@ -250,13 +250,13 @@ input[type=email] {
         width: 90%;
         font-size: 15px;
         margin-left: 0px;
-        margin-top: 1rem;
+        margin-top: 0rem;
         padding: 1rem;
     }
     * {
         width: 100%;
         margin: auto;
-        /* justify-content: center; */
+        justify-content: center;
         align-items: center;
         text-align: center;
     }
